--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,6 +28,17 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.commons-digester-2.1.jar=jars\\tiles\\commons-digester-2.1.jar
+file.reference.org.apache.commons.beanutils.jar=jars\\tiles\\org.apache.commons.beanutils.jar
+file.reference.tiles-api-3.0.5.jar=jars\\tiles\\tiles-api-3.0.5.jar
+file.reference.tiles-autotag-core-runtime-1.2.jar=jars\\tiles\\tiles-autotag-core-runtime-1.2.jar
+file.reference.tiles-core-3.0.5.jar=jars\\tiles\\tiles-core-3.0.5.jar
+file.reference.tiles-jsp-3.0.5.jar=jars\\tiles\\tiles-jsp-3.0.5.jar
+file.reference.tiles-request-api-1.0.7.jar=jars\\tiles\\tiles-request-api-1.0.7.jar
+file.reference.tiles-request-jsp-1.0.6.jar=jars\\tiles\\tiles-request-jsp-1.0.6.jar
+file.reference.tiles-request-servlet-1.0.7.jar=jars\\tiles\\tiles-request-servlet-1.0.7.jar
+file.reference.tiles-servlet-3.0.5.jar=jars\\tiles\\tiles-servlet-3.0.5.jar
+file.reference.tiles-template-3.0.5.jar=jars\\tiles\\tiles-template-3.0.5.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -46,7 +57,18 @@ javac.classpath=\
     ${libs.jstl.classpath}:\
     ${libs.hibernate4-persistence.classpath}:\
     ${libs.MySQLDriver.classpath}:\
-    ${libs.hibernate4-support.classpath}
+    ${libs.hibernate4-support.classpath}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.org.apache.commons.beanutils.jar}:\
+    ${file.reference.tiles-api-3.0.5.jar}:\
+    ${file.reference.tiles-autotag-core-runtime-1.2.jar}:\
+    ${file.reference.tiles-core-3.0.5.jar}:\
+    ${file.reference.tiles-jsp-3.0.5.jar}:\
+    ${file.reference.tiles-request-api-1.0.7.jar}:\
+    ${file.reference.tiles-request-jsp-1.0.6.jar}:\
+    ${file.reference.tiles-request-servlet-1.0.7.jar}:\
+    ${file.reference.tiles-servlet-3.0.5.jar}:\
+    ${file.reference.tiles-template-3.0.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
